Fix bug with navbar on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,7 +263,7 @@ main.active {
 
 @media only screen and (max-width: 768px) {
   .header {
-    width: 50%;
+    width: 100%;
     padding: 20px 5%;
   }
 
